--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "switchstring"
 version = "0.1.0"
 edition = "2018"
+license = "0BSD"
+description = "subtractable strings"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
